| Summary: | ASTERISK-28883: Spyee information ist missing in ChanSpyStop AMI Event | ||
| Reporter: | Hendrik Wedhorn (hwedhorn) | Labels: | |
| Date Opened: | 2020-05-11 02:01:35 | Date Closed: | 2021-01-06 18:22:36.000-0600 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Applications/app_chanspy |
| Versions: | 16.10.0 16.13.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The documentation in the wiki says there should be spyee-channel information elements in the ChanSpyStop AMI event.
https://wiki.asterisk.org/wiki/display/AST/Asterisk+16+ManagerEvent_ChanSpyStop However, this is not the case in Asterisk <= 16.10.0 Version. We're using these Spyee* arguments since Asterisk 11.x, so these arguments vanished in Asterisk 12 or higher. I already made a patch to readd this and i will add a gerrit-link as soon as possible. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-05-11 02:01:36.030-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2020-05-11 04:12:58.862-0500 Assigning to you as you are providing a patch. Once up just comment and this will automatically go back into triage. By: Asterisk Team (asteriskteam) 2020-05-25 12:00:01.116-0500 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: Hendrik Wedhorn (hwedhorn) 2020-09-09 08:03:57.493-0500 Added Gerrit Review By: Asterisk Team (asteriskteam) 2020-09-09 08:03:58.012-0500 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. | ||